--- a/models/orders.yml
+++ b/models/orders.yml
@@ -42,11 +42,11 @@ sources:
           aggregation: sum
           type: double
       tests: 
-        - relationships:
-            to: ref('source__tpch_customer')
-            field: c_custkey 
-            relation: one_to_many 
-            join: left_join
+        # - relationships:
+        #     to: ref('source__tpch_customer')
+        #     field: c_custkey 
+        #     relation: one_to_many 
+        #     join: left_join
 
     - name: O_ORDERSTATUS
       meta:
