--- a/models/orders.yml
+++ b/models/orders.yml
@@ -44,8 +44,9 @@ sources:
         - relationships:
             to: source('tpch', 'customer')
             field: c_custkey 
-            relation: one_to_many 
-            join: left_join
+            rakam:
+              relation: one_to_many 
+              join: left_join
 
     - name: O_ORDERSTATUS
       meta:
