--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -21,7 +21,7 @@ jobs:
         id: changedfiles
         with:
           token: ${{ github.token }}
-          pattern: 'models\/([A-Za-z0-9_]+)\.sql$'
+          pattern: 'models\/(.*).sql$'
 
       - name: Get Database Credentials
         run: echo '${{secrets.dbt_profiles_yml}}' > profiles.yml
