--- a/models/orders.yml
+++ b/models/orders.yml
@@ -21,7 +21,7 @@ sources:
         aggregates:
           totals_by_date:
             measures: ['total_orders', 'total_users']
-            dimensions: ['o_orderdate', 'o_orderstatus']
+            dimensions: ['o_orderdate', 'o_orderstatus', 'o_orderpriority']
     columns:
     - name: O_ORDERKEY
       meta:
