--- a/models/customer.yml
+++ b/models/customer.yml
@@ -7,11 +7,12 @@ sources:
   - name: customer
     identifier: CUSTOMER
     meta: 
-      measures:
-        total_rows:
-          aggregation: count 
-        sqlmeasure:
-          sql: "{measure.total_rows} * 2"
+      rakam:
+        measures:
+          total_rows:
+            aggregation: count 
+          sqlmeasure:
+            sql: "{measure.total_rows} * 2"
     columns:
     - name: C_CUSTKEY
       meta:
