--- a/models/sources.yml
+++ b/models/sources.yml
@@ -4,39 +4,42 @@ sources:
   database: SNOWFLAKE_SAMPLE_DATA
   schema: TPCH_SF1
   tables:
-  - name: nation
-    identifier: NATION
-    meta:
-      measures:
-        count_of_rows:
-          aggregation: count
-          type: double
-    columns:
-    - name: N_NATIONKEY
+    - name: olmayanbitablo
+      columns:
+        - name: olmayanbicolumn
+    - name: nation
+      identifier: NATION
       meta:
-        dimension:
-          type: double
-          name: n_nationkey
-        measure:
-          dimension: n_nationkey
-          aggregation: sum
-          type: double
-    - name: N_NAME
-      meta:
-        dimension:
-          type: string
-          name: n_name
-    - name: N_REGIONKEY
-      meta:
-        dimension:
-          type: double
-          name: n_regionkey
-        measure:
-          dimension: n_regionkey
-          aggregation: sum
-          type: double
-    - name: N_COMMENT
-      meta:
-        dimension:
-          type: string
-          name: n_comment
+        measures:
+          count_of_rows:
+            aggregation: count
+            type: double
+      columns:
+      - name: N_NATIONKEY
+        meta:
+          dimension:
+            type: double
+            name: n_nationkey
+          measure:
+            dimension: n_nationkey
+            aggregation: sum
+            type: double
+      - name: N_NAME
+        meta:
+          dimension:
+            type: string
+            name: n_name
+      - name: N_REGIONKEY
+        meta:
+          dimension:
+            type: double
+            name: n_regionkey
+          measure:
+            dimension: n_regionkey
+            aggregation: sum
+            type: double
+      - name: N_COMMENT
+        meta:
+          dimension:
+            type: string
+            name: n_comment
