--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -7,7 +7,9 @@ on:
     branches:
       - main
     paths:
-      - '**.(sql|yml|jinja2)'
+      - '**.sql'
+      - '**.yml'
+      - '**.jinja2'
 
 jobs:
   dbt:
