--- a/models/customer.yml
+++ b/models/customer.yml
@@ -8,6 +8,7 @@ sources:
     identifier: CUSTOMER   
     meta:  
       metriql:
+        category: Category2
         measures:
           total_rows:
             aggregation: count 
