--- a/models/orders.yml
+++ b/models/orders.yml
@@ -8,6 +8,7 @@ sources:
     identifier: ORDERS    
     meta: 
       metriql:  
+        category: test
         mappings: 
           userId: o_custkey
           eventTimestamp: o_orderdate    
