--- a/models/orders.yml
+++ b/models/orders.yml
@@ -8,7 +8,7 @@ sources:
     identifier: ORDERS    
     meta: 
       metriql:  
-        category: test
+        #category: test
         mappings: 
           userId: o_custkey
           eventTimestamp: o_orderdate    
@@ -63,6 +63,8 @@ sources:
           report:
             datastudio:
               semantic_type: country
+            looker:
+              datatype: duration
         metriql.measure:
           aggregation: sum
           type: double
