--- a/models/orders.yml
+++ b/models/orders.yml
@@ -35,7 +35,7 @@ sources:
           name: o_orderkey
           report:
             datastudio:
-              semantic_type: currency_usd
+              semantic_type: currencys_usd
         metriql.measure:
           name: o_orderkey
           aggregation: sum
