--- a/models/orders.yml
+++ b/models/orders.yml
@@ -16,10 +16,13 @@ sources:
           total_orders:
             aggregation: count 
             type: double
+            report:
+              datastudio:
+                semantic_type: currency_usd
           filtered_measure:
             aggregation: count
             filters: 
-              - {dimension: o_orderkey, operator: 'equals', value: 10, valueType: 'double'}
+              - {dimension: o_orderkey, operator: 'equals', value: 10, valueType: 'long'}
           total_users:
             aggregation: approximate_unique
             dimension: o_custkey
